  the exception even if no data had been sent to the client.  It now only
  reraises the exception if data has actually been sent to the client.  See
  https://github.com/Pylons/waitress/pull/52 and
  https://github.com/Pylons/waitress/issues/51

- Add a ``docs`` section to tox.ini that, when run, ensures docs can be built.

0.8.9 (2014-05-16)
------------------

- Fix tests under Windows.  NB: to run tests under Windows, you cannot run
  "setup.py test" or "setup.py nosetests".  Instead you must run ``python.exe
  -c "import nose; nose.main()"``.  If you try to run the tests using the
  normal method under Windows, each subprocess created by the test suite will
  attempt to run the test suite again.  See
  https://github.com/nose-devs/nose/issues/407 for more information.

- Give the WSGI app_iter generated when ``wsgi.file_wrapper`` is used
  (ReadOnlyFileBasedBuffer) a ``close`` method.  Do not call ``close`` on an
  instance of such a class when it's used as a WSGI app_iter, however.  This is
  part of a fix which prevents a leakage of file descriptors; the other part of
  the fix was in WebOb
  (https://github.com/Pylons/webob/commit/951a41ce57bd853947f842028bccb500bd5237da).

- Allow trusted proxies to override ``wsgi.url_scheme`` via a request header,
  ``X_FORWARDED_PROTO``.  Allows proxies which serve mixed HTTP / HTTPS
  requests to control signal which are served as HTTPS.  See
  https://github.com/Pylons/waitress/pull/42.

0.8.8 (2013-11-30)
------------------

- Fix some cases where the creation of extremely large output buffers (greater
  than 2GB, suspected to be buffers added via ``wsgi.file_wrapper``) might
  cause an OverflowError on Python 2.  See
  https://github.com/Pylons/waitress/issues/47.

- When the ``url_prefix`` adjustment starts with more than one slash, all
  slashes except one will be stripped from its beginning.  This differs from
  older behavior where more than one leading slash would be preserved in
  ``url_prefix``.
