@@ -16,6 +16,10 @@ Next release
 
 - Add a ``docs`` section to tox.ini that, when run, ensures docs can be built.
 
+- If an ``application`` value of ``None`` is supplied to the ``create_server``
+  constructor function, a ValueError is now raised eagerly instead of an error
+  occuring during runtime.  See https://github.com/Pylons/waitress/pull/60
+
 0.8.9 (2014-05-16)
 ------------------
 
